# scgraph_data

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.cfg  translate.py
test/: 01_world_highway_test.py  02_world_railway_test.py  03_world_highway_and_marnet_test.py  04_import_time_test.py
